# taskdock

./: .env.example  .gitignore  Pullrequests.md  README.md  dashboard-snapshot.md  install.ps1  network-requests.md  package-lock.json  package.json  pkg.config.json  tsconfig.backend.json  tsconfig.json  tsconfig.renderer.json  vite.config.ts
.github/acl/: access.yml
.github/compliance/: inventory.yml
.github/workflows/: release.yml
docs/: bridge-to-tauri-optimization.md  cfv-client-analysis.md  geneva-api-analysis.md  logging-architecture.md  logging-implementation-summary.md  logging-usage-examples.md
docs/design/: dgrep-feature-test-checklist.md  taskdock-architecture-overview.md
docs/plans/: 2025-01-23-cortex-design.md  2026-01-24-console-based-ai-review-design.md  2026-01-24-console-based-ai-review-implementation.md  2026-01-24-vertical-tabs-implementation.md  2026-01-24-vertical-tabs-sections-design.md  2026-01-26-claude-terminal-show-hide-design.md  2026-01-26-multiple-reviews-walkthroughs-design.md  2026-01-26-multiple-reviews-walkthroughs-plan.md  2026-01-28-pr-file-memory-optimization-design.md  2026-01-28-pr-file-memory-optimization-impl.md  (+35 more)
icm-exploration/: EXPLORATION-REPORT.md  ICM-CLONE-KNOWLEDGE-BASE.md  api-calls.json  dom-advanced-search-initial.html  ui-elements.json
scripts/: analyze-pipe-msgs.mjs  build-sidecar.js  bump-version.mjs  explore-icm-portal.cjs  extract-samples.mjs  log-transform-demo.mjs  log-transform-html.mjs  pipe-msg-demo.mjs  publish-release.ps1  restart-dev.ps1  test-icm-api.ts  test-icm-queries.ts  test-shared-queries.ts  validate-geneva-api.ts
src-backend/: bridge.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: autostart.rs  deep_link.rs  file_io.rs  mod.rs  storage.rs  updater.rs
(+208 files in other folders)
