[package]
name = "taskdock"
version = "0.0.8"
description = "TaskDock - Desktop productivity app with PR Review and more"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "taskdock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dirs = "6.0"
tauri = { version = "2.10.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
